--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-paginate": "7.0.0",
     "react-perfect-scrollbar": "1.5.5",
     "react-player": "2.6.2",
+    "react-query": "^3.34.2",
     "react-rating": "2.0.5",
     "react-redux": "7.1.3",
     "react-ripples": "2.2.1",
